# codewars

./: .gitignore  Isograms.py  digitalRoot.py  directions_reductions.py  english_beggers.py  largest_5_numbers_in_a_series.py  listFiltering.py  multiples_of_3_and_5.py  odd_int.py  orderedCountOfCharacters.py  orderedCountOfCharactersTest.py  pete_the_baker.py  readme.md  reverse_polish_notation.py  snail.py  tags
c/: bit-counting-main.c  bit-counting.c  count-the-digit-main.c  count-the-digit-test.c  count-the-digit.c  even-or-odd-test.c  even-or-odd.c  exes-or-ohs-test.c  exes-or-ohs.c  fibonacci-monad.hs  linked_list_to_string.c  linked_list_to_string.main.c  linked_list_to_string_test.c  needle-in-a-haystack-main.c  needle-in-a-haystack.c  printer_errors.c  rgb-to-hex-main.c  rgb-to-hex-test.c  rgb-to-hex.c  stacks.c  stacks_main.c  stacks_test.c  string-repeat-main.c  string-repeat-test.c  string-repeat.c  sum_of_numbers.c  sum_of_numbers_main.c  sum_of_numbers_test.c
clojure-codewars/: CHANGELOG.md  README.md  project.clj
cpp/: CMakeLists.txt  a-chain-adding-function-test.cpp  a-chain-adding-function.cpp  consecutive-strings-test.cpp  consecutive-strings.cpp  dna-to-rna-conv-test.cpp  dna-to-rna-conv.cpp  readme.md  snail.cpp  two-to-one-test.cpp  two-to-one.cpp
go/: railFenceCipher.go  sudokuSolnValidator.go
haskell/: A9n.hs  AlternateSplit.JorgeVS.Kata.hs  Array.diff.hs  Codewars.Exercise.MergeChecker.hs  Codewars.G964.Thirteen.hs  Codewars.Kata.DecodeMorse.hs  Codewars.Kata.Hashtag.hs  Codewars.Kata.TenMinuteWalk.hs  Codewars.Kata.YourOrderPlease.hs  Likes  (+44 more)
(+146 files in other folders)
