cmake_minimum_required (VERSION 2.6)

project (dna-to-rna-conv)
add_executable(dna-to-rna-conv-test dna-to-rna-conv-test.cpp)

project (two-to-one)
add_executable(two-to-one-test two-to-one-test.cpp)

project (consecutive-strings)
add_executable(consecutive-strings-test consecutive-strings-test.cpp)

project (a-chain-adding-function)
add_executable(a-chain-adding-function-test a-chain-adding-function-test.cpp)

